--- a/docs/extras/modules/data_connection/document_loaders/integrations/web_loaders/youtube.mdx
+++ b/docs/extras/modules/data_connection/document_loaders/integrations/web_loaders/youtube.mdx
@@ -14,9 +14,14 @@ You'll need to install youtube-transcript library:
 npm install youtube-transcript
 ```
 
+If you'll also need to add video info to the metadata:
+```bash npm2yarn
+npm install youtubei.js
+```
+
 ## Usage
 
-You need to specify a link or video id in the `urlOrId`. You can also specify `language` in [ISO 639-1](https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes).
+You need to specify a link to the video in the `url`. You can also specify `language` in [ISO 639-1](https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes) and `addVideoInfo` flag.
 
 import CodeBlock from "@theme/CodeBlock";
 import Example from "@examples/document_loaders/youtube.ts";
