--- a/docs/extras/modules/data_connection/document_loaders/integrations/file_loaders/video_transcription.mdx
+++ b/docs/extras/modules/data_connection/document_loaders/integrations/file_loaders/video_transcription.mdx
@@ -13,7 +13,7 @@ You'll need to install the [FFmpeg](https://ffmpeg.org/) and the [fluent-ffmpeg]
 To run this loader you will need to create an account on the Open AI and obtain an auth key from the https://platform.openai.com/account page.
 
 ```bash npm2yarn
-npm install youtube-transcript fluent-ffmpeg
+npm install fluent-ffmpeg
 ```
 
 ## Usage
